src/expr/src/scalar/func/impls/snapshots/mz_expr__scalar__func__impls__datum__pg_column_size.snap
---
source: src/expr/src/scalar/func/impls/datum.rs
expression: "#[sqlfunc()]\nfn pg_column_size<'a>(a: Datum<'a>) -> Result<Option<i32>, EvalError> {\n    match a {\n        Datum::Null => Ok(None),\n        datum => {\n            let sz = mz_repr::datum_size(&datum);\n            i32::try_from(sz)\n                .map(Some)\n                .or_else(|_| Err(EvalError::Int32OutOfRange(sz.to_string().into())))\n        }\n    }\n}\n"
---
#[derive(
    proptest_derive::Arbitrary,
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
    mz_lowertest::MzReflect,
)]
pub struct PgColumnSize;
impl crate::func::EagerUnaryFunc for PgColumnSize {
    type Input<'a> = Datum<'a>;
    type Output<'a> = Result<Option<i32>, EvalError>;
    fn call<'a>(&self, a: Self::Input<'a>) -> Self::Output<'a> {
        pg_column_size(a)
    }
    fn output_type(&self, input_type: mz_repr::SqlColumnType) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::EagerUnaryFunc::propagates_nulls(self);
        let nullable = output.nullable;
        output.nullable(nullable || (propagates_nulls && input_type.nullable))
    }
}
impl std::fmt::Display for PgColumnSize {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(pg_column_size))
    }
}
fn pg_column_size<'a>(a: Datum<'a>) -> Result<Option<i32>, EvalError> {
    match a {
        Datum::Null => Ok(None),
        datum => {
            let sz = mz_repr::datum_size(&datum);
            i32::try_from(sz)
                .map(Some)
                .or_else(|_| Err(EvalError::Int32OutOfRange(sz.to_string().into())))
        }
    }
}
